Replace fail() usage by real assertions in databinding tests
Some other minor things like using generified methods and new apis like
List.of changed wherever seen for the sake of improving readability.